--- a/SailScores.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/SailScores.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@using SailScores.Identity.Entities
+@inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
