--- a/SailScores.Web/Views/Account/Register.cshtml
+++ b/SailScores.Web/Views/Account/Register.cshtml
@@ -11,6 +11,16 @@
             <h4>Create a new account.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">  
+                <label asp-for="FirstName"></label>  
+                <input asp-for="FirstName" class="form-control" />  
+                <span asp-validation-for="FirstName" class="text-danger"></span>  
+            </div>  
+            <div class="form-group">  
+                <label asp-for="LastName"></label>  
+                <input asp-for="LastName" class="form-control" />  
+                <span asp-validation-for="LastName" class="text-danger"></span>  
+            </div>  
             <div class="form-group">
                 <label asp-for="Email"></label>
                 <input asp-for="Email" class="form-control" />
@@ -21,6 +31,7 @@
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="ConfirmPassword"></label>
                 <input asp-for="ConfirmPassword" class="form-control" />
