--- a/SailScores.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SailScores.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,19 +1,24 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.Extensions.Localization
+@using SailScores.Identity.Entities
 @using SailScores.Web.Resources;
 @using SailScores.Web.Services;
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 @inject AppSettingsService settingsService
 
 @inject IStringLocalizer<SharedResource> localizer
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
-        <a class="nav-link" href="/Identity/Account/Manage/ChangePassword" title="Change Password">@UserManager.GetUserName(User)</a>
-        <button type="submit" class="btn btn-link navbar-btn navbar-link">@localizer["Log out"]</button>
+    var user = await UserManager.GetUserAsync(User);
+    var displayName = (!String.IsNullOrWhiteSpace(user.FirstName) && !String.IsNullOrWhiteSpace(user.LastName) )
+        ? $"{user.FirstName} {user.LastName}"
+        : user.Email;
+    <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="float-right">
+        <a class="btn btn-link float-right" href="/Identity/Account/Manage/ChangePassword" title="Change Password">@displayName</a><br />
+        <button type="submit" class="btn btn-link float-right">@localizer["Log out"]</button>
     </form>
 }
 else
