--- a/SailScores.Web/Views/Race/Details.cshtml
+++ b/SailScores.Web/Views/Race/Details.cshtml
@@ -8,9 +8,9 @@
 }
 <div class="row">
     <div class="col-sm-6">
-        <h2 id="racetitle">
+        <h1 id="racetitle" class="h2">
             @Model.Item.DisplayName
-        </h2>
+        </h1>
         @if (Model.CanEdit)
         {
             @Html.ActionLink("Edit", "Edit", "Race",
