Preliminary results supported
Closes #159
Closes #158
Moved Preliminary to State

--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -12,13 +12,22 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="/images/TypiqueSeries.png" alt="First slide">
+                    <picture class="d-block w-100">
+                        <source srcset="images/TypiqueSeries.webp" type="image/webp" class="d-block w-100">
+                        <img src="/images/TypiqueSeries.png" alt="Series results" class="d-block w-100">
+                    </picture>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="/images/TypiqueRaceEntry.png" alt="Second slide">
+                    <picture>
+                        <source srcset="images/TypiqueRaceEntry.webp" type="image/webp" class="d-block w-100">
+                        <img src="/images/TypiqueRaceEntry.png" alt="Results entry" class="d-block w-100">
+                    </picture>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="/images/TypiqueMainPage.png" alt="Third slide">
+                    <picture class="d-block w-100">
+                        <source srcset="images/TypiqueMainPage.webp" type="image/webp" class="d-block w-100">
+                        <img src="/images/TypiqueMainPage.png" alt="Club main page" class="d-block w-100">
+                    </picture>
                 </div>
             </div>
         </div>
