--- a/SailScores.Web/Views/Shared/_ResultsTable.cshtml
+++ b/SailScores.Web/Views/Shared/_ResultsTable.cshtml
@@ -15,6 +15,10 @@
 
 @if (Model != null)
 {
+    if (Model.FlatResults.IsPreliminary ?? false)
+    {
+        <div><strong><span class="text-warning">Results are preliminary.</span> Protests may be pending.</strong></div>
+    }
     <div class="table-responsive-sm">
         <table class="table table-hover table-sm" summary="Results for series">
             <thead>
@@ -73,9 +77,10 @@
                     }
                     else
                     {
-                        @Html.ActionLink(
-                            @race.ShortName
-                            , "Details", "Race", new { id = race.Id })
+                        <a asp-controller="Race"
+                           asp-action="Details"
+                           asp-route-id="@race.Id"
+                           class=" @(race.State == RaceState.Preliminary ? "text-warning" : "")">@race.ShortName</a>
                         <br />
                         <div class="weather">
                             @if (race.WindDirectionDegrees.HasValue)
