--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -6,6 +6,33 @@
     @ViewData["Title"]
 </h3>
 <h3>
+    October 13th, 2020
+</h3>
+<h5>Summer's over</h5>
+<p>
+    Here in Minnesota, the sailing season has come to an end for 2020. In the past
+    few months we've made some small improvements to performance and stability.
+</p>
+<p>
+    And automatic weather information snuck in. Weather info is filled in
+    when a race is created, or moved from "scheduled" to "raced." Prefilled
+    weather info will be cleared out when the race date is changed.
+</p>
+<p>
+    In the next few months, SailScores series should gain the ability to have
+    overlapping competitor divisions. With this, a regatta can include separate
+    results any subset of the sailors, such as youth or single-handed, while still
+    showing them in the overall regatta results.
+</p>
+<p>
+    Your thoughts and feature requests are welcome, either by
+    <a href="mailto:info@sailscores.com">email</a> or at 
+    <a href="https://github.com/jbfraser1/SailScores/issues" target="_blank" rel="noopener noreferrer">GitHub.</a>
+    For example, since the initial go-live clubs haven't expressed much interest
+    in importing results from other systems, so time has been spent on better stats
+    reporting and improving the result entry UI. 
+</p>
+<h3>
     April 30th, 2020
 </h3>
 <h5>Staying at home</h5>
