--- a/SailScores.Web/Views/ClubRequest/Index.cshtml
+++ b/SailScores.Web/Views/ClubRequest/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SailScores.Web.Models.SailScores.ClubRequestViewModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "SailScores Sign-up";
 }
 
 <h1>Give it a try. It's free.</h1>
