--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -1,6 +1,7 @@
 ﻿@model SailScores.Web.Models.SailScores.AboutViewModel
 @{
     ViewData["Title"] = "About SailScores";
+    ViewData["MetaDescription"] = "More details about SailScores";
 }
 
 
