--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -1,10 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "News";
+    ViewData["Title"] = "SailScores News";
+    ViewData["MetaDescription"] = "Latest news about SailScores";
 }
-<h3>
-    <span class="far fa-newspaper"></span>
-    @ViewData["Title"]
-</h3>
+<h1 class="h3"><span class="far fa-newspaper"></span></h1>
 <h3>
     October 13th, 2020
 </h3>
@@ -15,7 +13,7 @@
 </p>
 <p>
     And automatic weather information snuck in. Weather info is filled in
-    when a race is created, or moved from "scheduled" to "raced." Prefilled
+    when a race is created or moved from "scheduled" to "raced." Pre-filled
     weather info will be cleared out when the race date is changed.
 </p>
 <p>
@@ -26,11 +24,11 @@
 </p>
 <p>
     Your thoughts and feature requests are welcome, either by
-    <a href="mailto:info@sailscores.com">email</a> or at 
+    <a href="mailto:info@sailscores.com">email</a> or at
     <a href="https://github.com/jbfraser1/SailScores/issues" target="_blank" rel="noopener noreferrer">GitHub.</a>
     For example, since the initial go-live clubs haven't expressed much interest
     in importing results from other systems, so time has been spent on better stats
-    reporting and improving the result entry UI. 
+    reporting and improving the result entry UI.
 </p>
 <h3>
     April 30th, 2020
