--- a/SailScores.Web/Views/Shared/_Layout.cshtml
+++ b/SailScores.Web/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/png" href="~/images/favicon/favicon-32x32.png" sizes="32x32">
     <meta name="msapplication-TileColor" content="#2d89ef">
     <meta name="msapplication-TileImage" content="~/images/favicon/mstile-144x144.png">
-    <title>@ViewData["Title"] - SailScores</title>
+    <title>@ViewData["Title"]</title>
     @if (!String.IsNullOrWhiteSpace((String)ViewData["MetaDescription"]))
     {
         <meta name="description" content="@ViewData["MetaDescription"]" />
