SEO and 500 fixes

--- a/SailScores.Web/Views/Regatta/Details.cshtml
+++ b/SailScores.Web/Views/Regatta/Details.cshtml
@@ -9,7 +9,7 @@
 
 @model ClubItemViewModel<RegattaViewModel>
 @{
-    ViewBag.Title = Model.Item.Name;
+    ViewBag.Title = $"{Model.Item.Name} Results";
     Layout = "_ClubLayout";
     ViewData["MetaDescription"] = $"{Model.ClubInitials} {Model.Item.Season.Name} {Model.Item.Name} Regatta Results";
 }
