--- a/SailScores.Web/Views/Race/Details.cshtml
+++ b/SailScores.Web/Views/Race/Details.cshtml
@@ -7,41 +7,44 @@
     ViewData["MetaDescription"] = $"{Model.ClubInitials} {Model.Item.DisplayName} Race Results";
     Layout = "_ClubLayout";
 }
-<div class="row">
-    <div class="col-sm-6">
-        <h1 id="racetitle" class="h2">
-            @Model.Item.DisplayName
-        </h1>
-        @if (Model.CanEdit)
-        {
-            <a class="btn btn-outline-primary btn-sm"
-               asp-area=""
-               asp-action="Edit"
-               asp-route-returnUrl="@Context.Request.Path"
-               asp-route-id="@Model.Item.Id"
-            >Edit</a>
-            <a class="btn btn-outline-danger btn-sm"
-               asp-area=""
-               asp-action="Delete"
-               asp-route-id="@Model.Item.Id"
-               >Delete</a>
-        }
-        <h4>
-            @Model.Item.Fleet.Name
-        </h4>
-    </div>
-    <div class="col-sm-6 text-sm-right weather">
-        @if (!String.IsNullOrWhiteSpace(Model.Item.Weather?.WindDirection))
-        {
-            <span class="wi wi-wind from-@Model.Item.Weather.WindDirection-deg ss-wi-large" data-toggle="tooltip" title="@Model.Item.Weather.WindDirection°"></span>
-        }
-        <span class="h3" data-toggle="tooltip" title="@Model.Item.Weather?.WindSpeedUnits">
-            @if (!String.IsNullOrWhiteSpace(Model.Item.Weather?.WindSpeed))
+<div class="container">
+    <div class="row">
+        <div class="col-md-8">
+
+    <div class="row">
+        <div class="col-sm-6">
+            <h1 id="racetitle" class="h2">
+                @Model.Item.DisplayName
+            </h1>
+            @if (Model.CanEdit)
             {
-                //This is hideous, but the easiest way to avoid a space between the two elements.
-                @(Model.Item.Weather.WindSpeed)}@if (!String.IsNullOrWhiteSpace(Model.Item.Weather?.WindGust))
-            {@($"(g{Model.Item.Weather.WindGust})")
+                <a class="btn btn-outline-primary btn-sm"
+                   asp-area=""
+                   asp-action="Edit"
+                   asp-route-returnUrl="@Context.Request.Path"
+                   asp-route-id="@Model.Item.Id">Edit</a>
+                <a class="btn btn-outline-danger btn-sm"
+                   asp-area=""
+                   asp-action="Delete"
+                   asp-route-id="@Model.Item.Id">Delete</a>
             }
+            <h4>
+                @Model.Item.Fleet.Name
+            </h4>
+        </div>
+        <div class="col-sm-6 text-sm-right weather">
+            @if (!String.IsNullOrWhiteSpace(Model.Item.Weather?.WindDirection))
+            {
+                <span class="wi wi-wind from-@Model.Item.Weather.WindDirection-deg ss-wi-large" data-toggle="tooltip" title="@Model.Item.Weather.WindDirection°"></span>
+            }
+            <span class="h3" data-toggle="tooltip" title="@Model.Item.Weather?.WindSpeedUnits">
+                @if (!String.IsNullOrWhiteSpace(Model.Item.Weather?.WindSpeed))
+                {
+                    //This is hideous, but the easiest way to avoid a space between the two elements.
+                    @(Model.Item.Weather.WindSpeed)}
+                @if (!String.IsNullOrWhiteSpace(Model.Item.Weather?.WindGust))
+                {@($"(g{Model.Item.Weather.WindGust})")
+                }
             </span>
             @if (!string.IsNullOrWhiteSpace(Model.Item.Weather?.Icon))
             {
@@ -76,50 +79,54 @@
             </div>
         </div>
     }
-<table class="table" aria-describedby="racetitle">
-    <thead>
-    <tr>
-        <th scope="col">Place</th>
-        <th scope="col">Sail</th>
-        <th scope="col">Sailor</th>
-        <th scope="col">Boat</th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var score in Model.Item.Scores)
-    {
+    <table class="table" aria-describedby="racetitle">
+        <thead>
         <tr>
-            <td>
-                @((score.Place != null && score.Place != 0) ? score.Place.ToString() : "")
-                @(!String.IsNullOrWhiteSpace(score.Code) ? $"{score.Code} - {score.ScoreCode.Description}" : "")
-            </td>
-            <td>
-                @score.Competitor.SailNumber
-                @if (!String.IsNullOrWhiteSpace(score.Competitor.AlternativeSailNumber))
-                {
-                    @:(@score.Competitor.AlternativeSailNumber)
-                }
-            </td>
-            <td>
-                @score.Competitor.Name
-            </td>
-            <td>
-                @score.Competitor.BoatName
-            </td>
+            <th scope="col">Place</th>
+            <th scope="col">Sail</th>
+            <th scope="col">Sailor</th>
+            <th scope="col">Boat</th>
         </tr>
+        </thead>
+        <tbody>
+        @foreach (var score in Model.Item.Scores)
+        {
+            <tr>
+                <td>
+                    @((score.Place != null && score.Place != 0) ? score.Place.ToString() : "")
+                    @(!String.IsNullOrWhiteSpace(score.Code) ? $"{score.Code} - {score.ScoreCode.Description}" : "")
+                </td>
+                <td>
+                    @score.Competitor.SailNumber
+                    @if (!String.IsNullOrWhiteSpace(score.Competitor.AlternativeSailNumber))
+                    {
+                        @:(@score.Competitor.AlternativeSailNumber)
+                    }
+                </td>
+                <td>
+                    @score.Competitor.Name
+                </td>
+                <td>
+                    @score.Competitor.BoatName
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
+    @if (!String.IsNullOrWhiteSpace(Model.Item.UpdatedBy))
+    {
+        <span class="text-right"><small><em>Updated by @Model.Item.UpdatedBy</em></small></span><br/>
     }
-    </tbody>
-</table>
-@if (!String.IsNullOrWhiteSpace(Model.Item.UpdatedBy))
-{
-<span class="text-right"><small><em>Updated by @Model.Item.UpdatedBy</em></small></span><br />
+
+        </div>
+    
+    </div>
+</div>
+
+@section Scripts {
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
 }
-
-
-    @section Scripts {
-        <script>
-            $(function () {
-                $('[data-toggle="tooltip"]').tooltip()
-            })
-        </script>
-    }
