Markdown icon and link in club admin editor

--- a/SailScores.Web/Views/Admin/Edit.cshtml
+++ b/SailScores.Web/Views/Admin/Edit.cshtml
@@ -44,6 +44,8 @@
         </div>
         <div class="form-group">
             <label asp-for="Description" class="control-label"></label>
+            <a target="_blank" href="https://www.markdownguide.org/">
+                <span title="Supports MarkDown formatting" class="fab fa-markdown"></span></a>
             <textarea asp-for="Description" class="form-control" cols="60" rows="6"></textarea>
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
