Bugfix for race without fleet
Shouldn't be possible, but...

--- a/SailScores.Web/Views/Race/Details.cshtml
+++ b/SailScores.Web/Views/Race/Details.cshtml
@@ -29,7 +29,7 @@
                    asp-route-id="@Model.Item.Id">Delete</a>
             }
             <h4>
-                @Model.Item.Fleet.Name
+                @Model.Item.Fleet?.Name
             </h4>
         </div>
         <div class="col-sm-2 text-sm-right weather">
