--- a/SailScores.Web/Views/Club/Stats.cshtml
+++ b/SailScores.Web/Views/Club/Stats.cshtml
@@ -1,6 +1,5 @@
 @using Microsoft.Extensions.Localization;
 @using SailScores.Web.Resources;
-@using SailScores.Web.Extensions;
 @using SailScores.Web.Services;
 
 @inject IStringLocalizer<SharedResource> localizer
@@ -17,6 +16,15 @@
         <h1 class="display-4">@Model.Name @localizer["Stats"]</h1>
     </div>
 </div>
+@if (!String.IsNullOrWhiteSpace(Model.StatisticsDescription))
+{
+    <hr />
+    <div class="row">
+        <div class="col-md-6 d-none d-md-block">
+            @Html.Raw(Markdig.Markdown.ToHtml(Model.StatisticsDescription))
+        </div>
+    </div>
+}
 <table class="table">
     <thead>
         <tr>
