Remove unnecessary usings

--- a/SailScores.Web/Views/Admin/_RaceList.cshtml
+++ b/SailScores.Web/Views/Admin/_RaceList.cshtml
@@ -1,5 +1,4 @@
-﻿@using SailScores.Core.Services
-@model SailScores.Web.Models.SailScores.AdminViewModel
+﻿@model SailScores.Web.Models.SailScores.AdminViewModel
 <div class="card">
     <div class="card-header" id="racesHeading">
         <h5>
