--- a/SailScores.Web/Views/Race/Index.cshtml
+++ b/SailScores.Web/Views/Race/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Routing
-@using SailScores.Web.Models.SailScores;
+﻿@using SailScores.Web.Models.SailScores;
 @using SailScores.Core.Extensions;
 @using SailScores.Web.Resources
 @using Microsoft.Extensions.Localization
