Added form for notes on club stats.

--- a/SailScores.Web/Views/Club/Stats.cshtml
+++ b/SailScores.Web/Views/Club/Stats.cshtml
@@ -20,10 +20,20 @@
 {
     <hr />
     <div class="row">
-        <div class="col-md-6 d-none d-md-block">
+        <div class="col-md-9">
             @Html.Raw(Markdig.Markdown.ToHtml(Model.StatisticsDescription))
         </div>
+        <div class="col-md-3">
+            @if (Model.CanEdit)
+            {
+                <a asp-controller="Club"
+                   class="btn btn-outline-primary">@localizer["Edit Notes"]</a>
+            }
+        </div>
     </div>
+} else if (Model.CanEdit) {
+<a asp-controller="Club" asp-action="EditStats"
+   class="btn btn-outline-primary">@localizer["Add Notes"]</a>
 }
 <table class="table">
     <thead>
